@@ -1,10 +1,10 @@
 ===== Starting build =====
 Timestamp
-Sat Jan  7 09:28:36 UTC 2012
+Sat Jan  7 21:46:10 UTC 2012
 ==========================
 
 ===== Updating from SVN =====
-At revision 652.
+At revision 653.
 
 ===== Making JETI Version =====
 >>> cleaning
@@ -37,9 +37,9 @@ warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 Generate Version-stamp:
 //Automatically generated file - do not edit
 #define DATE_STR "07.01.2012"
-#define TIME_STR "04:04:37"
-#define SUB_VERS 5235-erez
-#define SVN_VERS "trunk-r653"
+#define TIME_STR "16:04:11"
+#define SUB_VERS 5242-erez
+#define SVN_VERS "trunk-r654"
 #define MOD_VERS "JETI   "
 
 Compiling C++: er9x.cpp
@@ -141,9 +141,9 @@ warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 Generate Version-stamp:
 //Automatically generated file - do not edit
 #define DATE_STR "07.01.2012"
-#define TIME_STR "04:04:41"
-#define SUB_VERS 5236-erez
-#define SVN_VERS "trunk-r653"
+#define TIME_STR "16:04:14"
+#define SUB_VERS 5243-erez
+#define SVN_VERS "trunk-r654"
 #define MOD_VERS "FRSKY   "
 
 Compiling C++: er9x.cpp
@@ -245,9 +245,9 @@ warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 Generate Version-stamp:
 //Automatically generated file - do not edit
 #define DATE_STR "07.01.2012"
-#define TIME_STR "04:04:45"
-#define SUB_VERS 5237-erez
-#define SVN_VERS "trunk-r653"
+#define TIME_STR "16:04:18"
+#define SUB_VERS 5244-erez
+#define SVN_VERS "trunk-r654"
 #define MOD_VERS "FRSKY NHT  "
 
 Compiling C++: er9x.cpp
@@ -349,9 +349,9 @@ warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 Generate Version-stamp:
 //Automatically generated file - do not edit
 #define DATE_STR "07.01.2012"
-#define TIME_STR "04:04:48"
-#define SUB_VERS 5238-erez
-#define SVN_VERS "trunk-r653"
+#define TIME_STR "16:04:22"
+#define SUB_VERS 5245-erez
+#define SVN_VERS "trunk-r654"
 #define MOD_VERS "ARDU   "
 
 Compiling C++: er9x.cpp
@@ -453,9 +453,9 @@ warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 Generate Version-stamp:
 //Automatically generated file - do not edit
 #define DATE_STR "07.01.2012"
-#define TIME_STR "04:04:52"
-#define SUB_VERS 5239-erez
-#define SVN_VERS "trunk-r653"
+#define TIME_STR "16:04:25"
+#define SUB_VERS 5246-erez
+#define SVN_VERS "trunk-r654"
 #define MOD_VERS "NMEA   "
 
 Compiling C++: er9x.cpp
@@ -557,9 +557,9 @@ warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 Generate Version-stamp:
 //Automatically generated file - do not edit
 #define DATE_STR "07.01.2012"
-#define TIME_STR "04:04:56"
-#define SUB_VERS 5240-erez
-#define SVN_VERS "trunk-r653"
+#define TIME_STR "16:04:29"
+#define SUB_VERS 5247-erez
+#define SVN_VERS "trunk-r654"
 #define MOD_VERS " NHT  "
 
 Compiling C++: er9x.cpp
@@ -658,9 +658,9 @@ warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 Generate Version-stamp:
 //Automatically generated file - do not edit
 #define DATE_STR "07.01.2012"
-#define TIME_STR "04:04:59"
-#define SUB_VERS 5241-erez
-#define SVN_VERS "trunk-r653"
+#define TIME_STR "16:04:32"
+#define SUB_VERS 5248-erez
+#define SVN_VERS "trunk-r654"
 #define MOD_VERS "   "
 
 Compiling C++: er9x.cpp
