@@ -1,6 +1,6 @@
 //Automatically generated file - do not edit
 #define DATE_STR "07.01.2012"
-#define TIME_STR "04:04:59"
-#define SUB_VERS 5241-erez
-#define SVN_VERS "trunk-r653"
+#define TIME_STR "16:04:32"
+#define SUB_VERS 5248-erez
+#define SVN_VERS "trunk-r654"
 #define MOD_VERS "   "
