@@ -11,6 +11,10 @@ description here
 
 ******************************************
 CHANGELOG: 7-1-2012 
+Frsky telemetry fix
+
+******************************************
+CHANGELOG: 7-1-2012 
 Added "Splash" marker to help eePe find the splash screen data
 NEMA Changes
 
